Fix broken css in two of the old style sheets
We need to put `!important` inside the selector, not outside.  CSS doesn't
care, but now these all go through SASS that does care.

--- a/source/styles/hlame1.css
+++ b/source/styles/hlame1.css
@@ -271,7 +271,7 @@ table#alpha-table {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid #000000; !important;
+  border: 1px solid #000000 !important;
 }
 table#alpha-table td {
   background-color: #cc9900;
